--- a/etc/quotes.html
+++ b/etc/quotes.html
@@ -28,10 +28,14 @@
 
         <ul>
             <li>
-                Quotes
+                It is one of the most remarkable things that in all of the biological sciences there is no clue as to the necessity of death. If you say we want to make perpetual motion, we have discovered enough laws as we studied physics to see that it is either absolutely
+                impossible or else the laws are wrong.
+                <br><br> But there is nothing in biology yet found that indicates the inevitability of death. This suggests to me that it is not at all inevitable, and that it is only a matter of time before the biologists discover what it is that is
+                causing us the trouble and that that terrible universal disease or temporariness of the human’s body will be cured.
+                <br>
                 <br>
                 <i>
-                Person Name
+                    Richard Feynman
                 </i>
             </li>
         </ul>
