--- a/etc/reading-list.html
+++ b/etc/reading-list.html
@@ -30,6 +30,19 @@
             <li>
                 <p>
                     <i>
+                        Lifespan: Why We Age―and Why We Don't Have To
+                    </i>
+                </p>
+                <p>
+                    David A. Sinclair PhD, Matthew D. LaPlante
+                </p>
+                <p>
+                    In Progress
+                </p>
+            </li>
+            <li>
+                <p>
+                    <i>
                     Atomic Habits: An Easy & Proven Way to Build Good Habits & Break Bad Ones
                 </i>
                 </p>
