--- a/etc/reading-list.html
+++ b/etc/reading-list.html
@@ -30,6 +30,19 @@
             <li>
                 <p>
                     <i>
+                        The Selfish Gene
+                    </i>
+                </p>
+                <p>
+                    Richard Dawkins
+                </p>
+                <p>
+                    In Progress (Sept 2021)
+                </p>
+            </li>
+            <li>
+                <p>
+                    <i>
                         Lifespan: Why We Age―and Why We Don't Have To
                     </i>
                 </p>
@@ -37,7 +50,7 @@
                     David A. Sinclair PhD, Matthew D. LaPlante
                 </p>
                 <p>
-                    In Progress
+                    Completed (Sept 2021)
                 </p>
             </li>
             <li>
