--- a/etc/quotes.html
+++ b/etc/quotes.html
@@ -21,21 +21,24 @@
         <hr>
     </div>
 
-    <div class="content">
+    <div id="quotes" class="content">
         <h3>
             Quotes
         </h3>
 
         <ul>
             <li>
-                It is one of the most remarkable things that in all of the biological sciences there is no clue as to the necessity of death. If you say we want to make perpetual motion, we have discovered enough laws as we studied physics to see that it is either absolutely
-                impossible or else the laws are wrong.
-                <br><br> But there is nothing in biology yet found that indicates the inevitability of death. This suggests to me that it is not at all inevitable, and that it is only a matter of time before the biologists discover what it is that is
-                causing us the trouble and that that terrible universal disease or temporariness of the human’s body will be cured.
-                <br>
-                <br>
+                Science is more than a body of knowledge; it is a way of thinking. I have a foreboding of an America in my children’s or grandchildren’s time—when the United States is a service and information economy; when nearly all the key manufacturing industries have slipped away to other countries; when awesome technological powers are in the hands of a very few, and no one representing the public interest can even grasp the issues; when the people have lost the ability to set their own agendas or knowledgeably question those in authority; when, clutching our crystals and nervously consulting our horoscopes, our critical faculties in decline, unable to distinguish between what feels good and what’s true, we slide, almost without noticing, back into superstition and darkness.
                 <i>
-                    Richard Feynman
+                    - Carl Sagan
+                </i>
+            </li>
+            <li>
+                It is one of the most remarkable things that in all of the biological sciences there is no clue as to the necessity of death. If you say we want to make perpetual motion, we have discovered enough laws as we studied physics to see that it is either absolutely
+                impossible or else the laws are wrong. But there is nothing in biology yet found that indicates the inevitability of death. This suggests to me that it is not at all inevitable, and that it is only a matter of time before the biologists discover what it is that is
+                causing us the trouble and that that terrible universal disease or temporariness of the human’s body will be cured.
+                 <i>
+                   - Richard Feynman
                 </i>
             </li>
         </ul>
